# RANSAC-Flow

./: .gitignore  README.md  conda-dev.yml  setup.cfg  tox.ini
data/: .gitignore  README.md
models/: .gitignore  README.md
notebooks/: .gitignore  0_Cleanup dataset.ipynb  0_Load data.ipynb  1_Coarse alignment.ipynb  1_Training.ipynb  2_Training.ipynb  2_Validation.ipynb  3_Scratch pad.ipynb  README.md
src/ransacflow/: train.py  train_orig.py  util.py
src/ransacflow/data/: __init__.py  artminer.py  dataset.py  megadepth.py  transform.py
src/ransacflow/model/: __init__.py  coarse_alignment.py  coarse_flow.py  feature.py  flow.py  loss.py  model_orig.py  ssimLoss.py
src/ransacflow/vgg/: model_vgg.py  train_vgg.py
