[metadata]
name = ransacflow
version = 0.1
description = An attempt to reimplement RANSAC-Flow, a generic two-stage image alignment process.
long_description = file: README.md
url = https://github.com/liuyenting/RANSAC-Flow
keywords =
license =
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python

[options]
zip_safe = True
package_dir =
    = src
packages = find:
install_requires =
    kornia
    pandas
    scikit-image
    torch
    torchvision

[options.entry_points]
console_scripts =

[options.packages.find]
where = src
